Add debounced movie filtering by genre and year
Introduced a useDebounce hook and updated the App component to support debounced filtering of movies by genre and release year. Added a filter UI with clear functionality and corresponding styles. Also added CORS configuration to the backend for local development and refactored MovieService to use Java 16+ stream toList().